# nanochat-deepseekv4

./: .gitignore  LICENSE  NOTICE.md  README.md  RESULTS.md  pyproject.toml
artifacts/deepseekv4_full_curve/: losses.csv  summary.csv
artifacts/deepseekv4_medium_mps_multiseed/: curve_summary.csv  curves.csv  expert_counts.csv  model_metadata.csv  runs.csv  summary.csv
artifacts/deepseekv4_small_multiseed/: curve_summary.csv  curves.csv  expert_counts.csv  model_metadata.csv  runs.csv  summary.csv
nanochat/: __init__.py  common.py  deepseek_v4.py  gpt.py
scripts/: compare_deepseekv4.py  plot_deepseekv4_results.py
tests/: test_deepseek_v4.py
