[project]
name = "nanochat-deepseekv4"
version = "0.1.0"
description = "Small PyTorch benchmark for DeepSeek-V4-style nanochat architecture changes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "nanochat-deepseekv4 contributors" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib>=3.10.0",
    "pyarrow>=18.0.0",
    "torch>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
